--- a/game-hub/public/html/index.html
+++ b/game-hub/public/html/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>កម្មវិធីពហុឧបករណ៍ (Multi-Tool App)</title>
+    <title>AI tool</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -86,7 +86,7 @@
         <div class="container mx-auto px-4 sm:px-6 lg:px-8">
             <nav class="flex items-center justify-between h-16">
                 <div class="flex-shrink-0">
-                    <a href="#" class="text-2xl font-bold text-blue-600">កម្មវិធីពហុឧបករណ៍</a>
+                    <a href="#" class="text-2xl font-bold text-blue-600">AI tool</a>
                 </div>
                 <div class="hidden md:block">
                     <div class="ml-10 flex items-baseline space-x-4">
@@ -123,7 +123,7 @@
         <!-- Home Page -->
         <section id="home" class="page-content active">
             <div class="text-center bg-white p-8 md:p-12 rounded-lg shadow-lg">
-                <h1 class="text-4xl md:text-5xl text-blue-700 mb-4">សូមស្វាគមន៍មកកាន់ កម្មវិធីពហុឧបករណ៍</h1>
+                <h1 class="text-4xl md:text-5xl text-blue-700 mb-4">សូមស្វាគមន៍មកកាន់ AI Tool</h1>
                 <p class="text-lg md:text-xl text-gray-600 max-w-3xl mx-auto mb-8">
                     គឺជាបណ្តុំឧបករណ៍ឌីជីថលដ៏មានអានុភាព ដែលជួយសម្រួលកិច្ចការប្រចាំថ្ងៃរបស់អ្នក ចាប់ពីការគ្រប់គ្រងឯកសារ រហូតដល់ការច្នៃប្រឌិតផ្សេងៗ។
                 </p>
@@ -491,7 +491,7 @@
     <!-- Footer -->
     <footer class="bg-white border-t mt-12">
         <div class="container mx-auto py-6 px-4 sm:px-6 lg:px-8 text-center text-gray-600">
-            <p>&copy; 2025 កម្មវិធីពហុឧបករណ៍. រក្សាសិទ្ធិគ្រប់យ៉ាង។</p>
+            <p>&copy; 2025 AI Tool. រក្សាសិទ្ធិគ្រប់យ៉ាង។</p>
         </div>
     </footer>
 
@@ -895,4 +895,5 @@
 
 </body>
 </html>
+
 
