--- a/game-hub/public/html/index.html
+++ b/game-hub/public/html/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>AI Tools ខ្មែរ</title>
+    <title>AI Tools</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -162,7 +162,7 @@
         <div class="container mx-auto px-4 sm:px-6 lg:px-8">
             <nav class="flex items-center justify-between h-16">
                 <div class="flex-shrink-0">
-                    <a href="#" onclick="showPage('home')" class="text-2xl font-bold text-blue-600">AI Tools ខ្មែរ</a>
+                    <a href="#" onclick="showPage('home')" class="text-2xl font-bold text-blue-600">AI Tools</a>
                 </div>
                 <div class="hidden md:block">
                     <div class="ml-10 flex items-baseline space-x-4">
@@ -212,9 +212,9 @@
             <div class="mt-16 bg-white p-8 md:p-12 rounded-lg shadow-lg">
                 <div class="grid grid-cols-1 md:grid-cols-2 gap-12 items-center">
                     <div>
-                        <h2 class="text-3xl md:text-4xl text-blue-700 mb-4">អំពីគម្រោងនេះ</h2>
+                        <h2 class="text-3xl md:text-4xl text-blue-700 mb-4">About Tool</h2>
                         <p class="text-gray-600 mb-6 leading-relaxed">
-                            AI Tools ខ្មែរ គឺជាគម្រោងមួយដែលបង្កើតឡើងក្នុងគោលបំណងផ្ដល់នូវឧបករណ៍ AI ដែលមានប្រយោជន៍ និងងាយស្រួលប្រើប្រាស់សម្រាប់អ្នកប្រើប្រាស់ជាភាសាខ្មែរ។ គ្រប់ឧបករណ៍ទាំងអស់ដំណើរការដោយផ្ទាល់នៅក្នុងកម្មវិធីរុករករបស់អ្នក ដោយមិនចាំបាច់ដំឡើងកម្មវិធីបន្ថែម ឬភ្ជាប់ទៅសេវាកម្មខាងក្រៅឡើយ។ យើងជឿជាក់ថាបច្ចេកវិទ្យាគួរតែអាចបានសម្រាប់មនុស្សគ្រប់គ្នា។
+                            AI Tools គឺជាProjectមួយដែលបង្កើតឡើងក្នុងគោលបំណងផ្ដល់នូវឧបករណ៍ AI ដែលមានប្រយោជន៍ និងងាយស្រួលប្រើប្រាស់សម្រាប់អ្នកប្រើប្រាស់ជាភាសាខ្មែរ។ គ្រប់ឧបករណ៍ទាំងអស់ដំណើរការដោយផ្ទាល់នៅក្នុងកម្មវិធីរុករករបស់អ្នក ដោយមិនចាំបាច់ដំឡើងកម្មវិធីបន្ថែម ឬភ្ជាប់ទៅសេវាកម្មខាងក្រៅឡើយ។ យើងជឿជាក់ថាបច្ចេកវិទ្យាគួរតែអាចបានសម្រាប់មនុស្សគ្រប់គ្នា។
                         </p>
                     </div>
                     <div class="space-y-4">
@@ -677,4 +677,5 @@
     </script>
 </body>
 </html>
+
 
